log
Thu 21 Mar 2024 03:22:38 PM UTC: 
 tests:  0|5
total_score: 0/70
f02c204
Thu 21 Mar 2024 07:50:21 PM UTC: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  1|4
total_score: 10/70
7a463f3
Thu 21 Mar 2024 07:52:14 PM UTC: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
c9630ea
Thu 21 Mar 2024 07:56:23 PM UTC: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:82:13: error: comparison between pointer and integer [-Werror]
   82 |     if(elem == dato)
      |             ^~
exercises.c:83:18: error: expected expression before ‘List’
   83 |       popCurrent(List *L);
      |                  ^~~~
cc1: all warnings being treated as errors
Compilation failed
5893317
Thu 21 Mar 2024 07:56:34 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:82:13: error: comparison between pointer and integer [-Werror]
   82 |     if(elem == dato)
      |             ^~
cc1: all warnings being treated as errors
Compilation failed
c1dc2df
Thu 21 Mar 2024 07:57:24 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
6e78b96
